# TC2038-algoritmos-adv

./: .gitignore  CMakeLists.txt  README.md
a01708119_Act0/: main.cpp
a01708119_Act1-1/: main.cpp
a01708119_Act1.1/: dnc.h  main.cpp
a01708119_Act1.2/: dynamicCoin.h  greedyCoin.h  main.cpp
a01708119_Act1.3/: backtracking.h  branch&Bound.h  main.cpp
a01708119_Act2.1/: file.txt  main.cpp
act-feb-12-remove-duplicates/: res.h
