cmake_minimum_required(VERSION 3.26)

project(TC2038-algoritmos-adv)

set(CMAKE_CXX_STANDARD 17)


add_executable(act-feb-12-remove-duplicates
        act-feb-12-remove-duplicates/main.cpp
        act-feb-12-remove-duplicates/res.h
)

add_executable(a01708119_Act1-1
        a01708119_Act1-1/main.cpp
)
